stages/stage2/set5-envoy-gateway/k8s/gateway/05-httproute-search.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: search
  namespace: apollo-airlines-apps
spec:
  parentRefs:
    - name: apollo-gateway
  hostnames: ["search.apollo.local"]
  rules:
    - backendRefs:
        - name: search
          port: 8083
