stages/stage2/set5-envoy-gateway/k8s/gateway/06-httproute-notification.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notification
  namespace: apollo-airlines-apps
spec:
  parentRefs:
    - name: apollo-gateway
  hostnames: ["notification.apollo.local"]
  rules:
    - backendRefs:
        - name: notification
          port: 8084
